# libgeodecomp

./: .appveyor.yml  .gitignore  .hgignore  .hgtags  .travis.yml  AUTHORS  CMakeLists.txt  COPYRIGHT  Makefile  README  cc.build.job  circle.yml  configure  rakefile.rb
src/: CMakeLists.txt  doxygen.conf  libflatarray  libgeodecomp.h  util.cmake
src/CMakeModules/: FindOpenCV.cmake
src/communication/: CMakeLists.txt  boostserialization.h  hpxcomponentregsitrationhelper.h  hpxpatchlink.h  hpxreceiver.cpp  hpxreceiver.h  hpxserialization.cpp  hpxserialization.h  hpxserializationwrapper.h  mpilayer.h  patchlink.h  serialization.h  serializationhelpers.h  typemaps.cpp  typemaps.h
src/examples/: CMakeLists.txt
src/examples/adaptivemeshrefinement/: CMakeLists.txt  main.cpp
src/examples/ants/: CMakeLists.txt  ants.cpp  main.cpp
src/examples/bouncingspheres/: CMakeLists.txt  main.cpp
src/examples/cars/: CMakeLists.txt  main.cpp
src/examples/chromatography/: CMakeLists.txt  main.cpp
src/examples/chromotography/: CMakeLists.txt  chromo.cpp
src/examples/circle/: CMakeLists.txt  circle.cpp  main.cpp
src/examples/flowingcanvas/: CMakeLists.txt  canvascell.h  canvasinitializer.h  canvaswriter.h  flowwidget.h  framegrabber.cpp  framegrabber.h  interactivesimulator.h  interactivesimulatorcpu.h  interactivesimulatorgpu.h  main.cpp  main.cu
src/examples/gameoflife/: CMakeLists.txt  common.h  gameoflife.cpp  main.cpp  main_hpx.cpp
src/examples/gameoflife3d/: CMakeLists.txt  gameoflife3d.cpp  main.cpp
src/examples/gameoflife_adcirc/: CMakeLists.txt  auto.cmake  avgdepth.f  hull.cpp  hull.h  kernel.f  main.cpp
src/examples/gameoflife_hpx/: CMakeLists.txt  main.cpp
src/examples/gameoflife_live/: CMakeLists.txt  gameoflife_live.cpp  main.cpp
src/examples/globalreductions/: CMakeLists.txt  main.cpp
src/examples/hardwarefluke/: CMakeLists.txt  main.cpp  pic9_evil_smiley.ppm
src/examples/jacobi2d/: CMakeLists.txt  jacobi.cpp  main.cpp
src/examples/jacobi3d/: CMakeLists.txt  jacobi3d.cpp  main.cpp
src/examples/jacobi3dupdateline/: CMakeLists.txt  main.cpp
src/examples/jacobi3dvectorized/: CMakeLists.txt  main.cpp
src/examples/latticeboltzmann/: CMakeLists.txt  lbm.cpp  main.cpp
src/examples/latticegas/: CMakeLists.txt  bigcell.h  cameratester.h  cell.cpp  cell.h  flowwidget.h  fpscounter.h  framegrabber.cpp  framegrabber.h  framegrapper.cpp  interactivesimulator.cu  interactivesimulator.h  interactivesimulatorcpu.cpp  interactivesimulatorcpu.h  interactivesimulatorgpu.cu  interactivesimulatorgpu.h  main.cpp  main.cu  simparams.cpp  simparams.h
src/examples/redBlackGaussSeidel/: CMakeLists.txt  main.cpp
src/examples/redblackgaussseidel/: CMakeLists.txt  (+1 more)
src/fixtures/: CMakeLists.test.txt  mpitest.h  testguard.h
src/geometry/: CMakeLists.txt  adjacency.h  adjacencymanufacturer.h  convexpolytope.h  coord.h  coordbox.h  cudaregion.h  dummyadjacencymanufacturer.h  fixedcoord.h  floatcoord.h  floatcoordbase.h  gridspacingcalculator.h  partitionmanager.h  plane.h  region.h  regionbasedadjacency.cpp  regionbasedadjacency.h  regionstreakiterator.h  stencils.h  streak.h  topologies.h  unstructuredgridmesher.h  voronoimesher.h
src/io/: CMakeLists.txt  asciiwriter.h  bovoutput.h  bovwriter.h  bovwriteralt.h  clonableinitializer.h  clonableinitializerwrapper.h  collectingwriter.h  hpxwritercollector.h  hpxwritersink.h  hpxwritersinkserver.h  image.cpp  image.h  imagepainter.h  initializer.h  ioexception.cpp  ioexception.h  logger.h  memorywriter.h  mockinitializer.cpp  mockinitializer.h  mocksteerer.h  mockwriter.cpp  mockwriter.h  mpiio.h  mpiioinitializer.h  mpiiowriter.h  parallelmemorywriter.h  parallelmockwriter.cpp  parallelmockwriter.h  parallelmpiiowriter.h  paralleltestwriter.h  parallelwriter.h  plotter.h  ppmwriter.h  qtwidgetwriter.h  remotesteerer.h  selector.h  sellsortingwriter.h  serialbovwriter.h  (+18 more)
src/loadbalancer/: CMakeLists.txt  biasbalancer.cpp  biasbalancer.h  loadbalancer.cpp  loadbalancer.h  mockbalancer.cpp  mockbalancer.h  noopbalancer.h  oozebalancer.cpp  oozebalancer.h  randombalancer.cpp  randombalancer.h  tracingbalancer.cpp  tracingbalancer.h
src/misc/: CMakeLists.txt  alignedallocator.h  apis.h  apitraits.h  autotuningsimulator.h  cacheblockingsimulationfactory.h  cellapitraits.h  chronometer.cpp  chronometer.h  clonable.h  color.cpp  color.h  commandserver.h  commontypedefs.h  containercell.h  coord.h  coordbox.h  coordmap.h  cudasimulationfactory.h  cudautil.h  dataaccessor.h  displacedgrid.h  exceptions.h  fixedarray.h  fixedcoord.h  fixedneighborhood.h  floatcoord.h  floatcoordbase.h  fpscounter.h  grid.h  gridbase.h  likely.h  linepointerassembly.h  linepointerneighborhood.h  linepointerupdatefunctor.h  logger.h  math.h  meshlessadapter.h  mpitest.h  neighborhood.h  (+47 more)
src/mpilayer/: CMakeLists.txt  mpilayer.h  typemaps.cpp  typemaps.h
src/parallelization/: CMakeLists.txt  autotuningsimulator.h  cacheblockingsimulator.h  chronometer.cpp  chronometer.h  cudasimulator.h  distributedsimulator.h  hierarchicalsimulator.h  hiparsimulator.h  hpxdataflowsimulator.h  hpxsimulator.cpp  hpxsimulator.h  mocksimulator.cpp  mocksimulator.h  monolithicsimulator.h  openmpsimulator.h  partitioningsimulator.h  serialsimulator.h  simulator.h  stripingsimulator.h  updategroup.h
src/storage/: CMakeLists.txt  alignedallocator.h  arrayfilter.h  boxcell.h  collectioninterface.h  containercell.h  coordmap.h  cudaarray.h  cudagrid.h  cudasoagrid.h  cudaupdatefunctor.h  dataaccessor.h  defaultarrayfilter.h  defaultcudaarrayfilter.h  defaultcudafilter.h  defaultfilter.h  defaultfilterfactory.h  displacedgrid.h  filter.h  filterbase.h  fixedarray.h  fixedneighborhood.h  fixedneighborhoodupdatefunctor.h  grid.h  gridbase.h  gridtypeselector.h  gridvecconv.h  image.cpp  image.h  linepointerassembly.h  linepointerneighborhood.h  linepointerupdatefunctor.h  makedefaultfilter.h  memberfilter.h  memorylocation.h  meshlessadapter.h  mockpatchaccepter.h  multicontainercell.h  neighborhoodadapter.h  neighborhooditerator.h  (+27 more)
src/testbed/: CMakeLists.txt  testbed.cpp
(+1122 files in other folders)
